heapuse-tests/tests/ui/fail-derive-too-many-attrs-1.rs
use heapuse_derive::Heap;
use heapuse_example::*;

#[derive(Heap)]
pub struct UnknownAttr {
    #[heap(add, add)]
    pub a: primitive::StructPrimitives,
}

fn main() {}
